# robot-stack-template

./: .gitignore  CLAUDE.md  LICENSE  README.md  manifest.yaml
broker/: mosquitto.conf
docker/: .dockerignore  compose.tmpl.yml  docker-compose.override.tmpl.yaml
docs/: contributing.md  integration_testing.md  ipc_conventions.md  new_node.md  node_contract.md  ops.md  profiles.md  quickstart.md  security.md  time.md
examples/node-cpp/: CLAUDE.md  CMakeLists.txt  Dockerfile.docker  Makefile  README.md
examples/node-cpp/src/: main.cpp
examples/node-python/: CLAUDE.md  Dockerfile.docker  Makefile  README.md  app.py
profiles/: dev-amd64.yaml  jetson.yaml  pi4.yaml  pi5.yaml
scripts/: bootstrap.sh  health.sh  new-node.sh
system/: 99-robot.rules  stack-update.service  stack-update.timer  unit.systemd.tmpl
tools/: stack.py
